# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   gin.H:
     additionalProperties: {}
@@ -50,8 +51,22 @@ definitions:
       totalPages:
         type: integer
     type: object
+externalDocs:
+  description: OpenAPI
+  url: https://swagger.io/resources/open-api/
+host: localhost:8080
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: This is a sample server celler server.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: Swagger Example API
+  version: "1.0"
 paths:
   /api/items:
     delete:
@@ -221,4 +236,7 @@ paths:
       summary: Register a new user account
       tags:
       - Users
+securityDefinitions:
+  BasicAuth:
+    type: basic
 swagger: "2.0"
